get_package_ids_by_congress works, is tested for basics

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,8 @@ responses = "^0.13.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+markers = [
+    "webtest: marks tests as hitting remote API endpoints",
+]
