--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ SQLAlchemy = "^1.4.8"
 testcontainers = {extras = ["postgres"], version = "^3.4.0"}
 pytest = "^6.2.3"
 responses = "^0.13.2"
+lxml = "^4.6.3"
 
 [tool.poetry.dev-dependencies]
 
