--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ responses = "^0.13.2"
 lxml = "^4.6.3"
 
 [tool.poetry.dev-dependencies]
+jupyterlab = "^3.0.14"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
