--- a/hearings_lib/hearings/config.toml
+++ b/hearings_lib/hearings/config.toml
@@ -6,6 +6,11 @@ name = "hearings"
 user = "postgres"
 table_config_path = "table_config.sql"
 
+[govinfo_db]
+host = 'localhost'
+name = 'govinfo'
+user = 'postgres'
+
 [data]
 committee_path = "gpo_tools/gpo_tools/data/committee_data.csv"
 house_assignment_path = "gpo_tools/gpo_tools/data/house_assignments_103-115-1.csv"
