--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ lxml = "^4.6.3"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^3.0.14"
+SQLAlchemy-Utils = "^0.37.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
