sanitize parsed fields with strip, add tests, prep for another massive scrape

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ testcontainers = {extras = ["postgres"], version = "^3.4.0"}
 pytest = "^6.2.3"
 responses = "^0.13.2"
 lxml = "^4.6.3"
+tqdm = "^4.60.0"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^3.0.14"
