--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^6.2.3"
 responses = "^0.13.2"
 lxml = "^4.6.3"
 tqdm = "^4.60.0"
+python-dateutil = "^2.8.1"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^3.0.14"
