--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ responses = "^0.13.2"
 lxml = "^4.6.3"
 tqdm = "^4.60.0"
 python-dateutil = "^2.8.1"
+mmh3 = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^3.0.14"
