--- a/chrg_tools/config.toml
+++ b/chrg_tools/config.toml
@@ -7,6 +7,8 @@ user = "postgres"
 table_config_path = "table_config.sql"
 
 [govinfo_db]
+db_type = 'postgresql'
+db_driver = 'psycopg2'
 host = 'localhost'
 name = 'govinfo'
 user = 'postgres'
