--- a/chrg_tools/config.toml
+++ b/chrg_tools/config.toml
@@ -1,10 +1,14 @@
 title = "Project Confgiuration"
 
-[database]
+[old_postgres]
 host = "localhost"
 name = "hearings"
 user = "postgres"
 table_config_path = "table_config.sql"
+
+[sqlite]
+db_driver = 'sqlite'
+db_filepath = ''
 
 [govinfo_db]
 db_type = 'postgresql'
@@ -14,6 +18,9 @@ name = 'govinfo'
 user = 'postgres'
 
 [data]
-committee_path = "gpo_tools/gpo_tools/data/committee_data.csv"
-house_assignment_path = "gpo_tools/gpo_tools/data/house_assignments_103-115-1.csv"
-senate_assignment_path = "gpo_tools/gpo_tools/data/senate_assignments_103-115-1.csv"
+committee_path = "chrg_tools/metadata_migration/committee_metadata/committee_data.csv"
+house_assignment_path = "chrg_tools/metadata_migration/committee_metadata/house_assignments_103-115-1.csv"
+senate_assignment_path = "chrg_tools/metadata_migration/committee_metadata/senate_assignments_103-115-1.csv"
+
+[mongodb]
+uri = 'mongodb://localhost'
